[package]
name = "pork-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
log = "0.4.20"
simple_logger = "4.2.0"
clap = { version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.183", features = ["serde_derive"] }
